--- a/csharp/SampleBot/BotLibrary/packages.config
+++ b/csharp/SampleBot/BotLibrary/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ProjectOxford.Face" version="1.2.1.2" targetFramework="portable45-net45+win8" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8" />
 </packages>
