--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # for API key
 apikey.json
+csharp/SampleBot/BotLibrary/Properties/Resources.Designer.cs
 csharp/SampleBot/BotLibrary/Properties/Resources.resx
 
 # for mac
