--- a/csharp/SampleBot/BotLibrary/BotLibrary.csproj
+++ b/csharp/SampleBot/BotLibrary/BotLibrary.csproj
@@ -35,16 +35,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ApiKey.cs" />
+    <Compile Include="KeyStore.cs" />
     <Compile Include="Docomo\Entity.cs" />
     <Compile Include="Docomo\Hiragana.cs" />
     <Compile Include="Docomo\Morph.cs" />
     <Compile Include="Docomo\Similarity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.ProjectOxford.Face, Version=1.2.1.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -57,16 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="apikey.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
