ユーザー情報の雛形作成

--- a/csharp/SampleBot/BotLibrary/BotLibrary.csproj
+++ b/csharp/SampleBot/BotLibrary/BotLibrary.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ApiKey.cs" />
+    <Compile Include="Docomo\Dialogue.cs" />
     <Compile Include="Docomo\Entity.cs" />
     <Compile Include="Docomo\Hiragana.cs" />
     <Compile Include="Docomo\Morph.cs" />
