--- a/csharp/SampleBot/SampleBot/SampleBot.csproj
+++ b/csharp/SampleBot/SampleBot/SampleBot.csproj
@@ -132,9 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <None Include="rule.csv">
+    <Content Include="App_Data\rule.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
