--- a/csharp/SampleBot/SampleBot/Web.config
+++ b/csharp/SampleBot/SampleBot/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="MicrosoftAppId" value="d180cc62-d046-4e1b-9eba-60870eee64a6" />
+    <add key="MicrosoftAppPassword" value="axrGNNgfgMb7OdsQPcrABBv" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
