--- a/csharp/SampleBot/ApiSamples/packages.config
+++ b/csharp/SampleBot/ApiSamples/packages.config
@@ -6,5 +6,6 @@
   <package id="Microsoft.ProjectOxford.Common" version="1.0.308" targetFramework="net452" />
   <package id="Microsoft.ProjectOxford.Emotion" version="1.0.331.1" targetFramework="net452" />
   <package id="Microsoft.ProjectOxford.Face" version="1.2.1.2" targetFramework="net452" />
+  <package id="Microsoft.ProjectOxford.Vision" version="1.0.370" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
 </packages>
